--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,12 +26,20 @@ jobs:
       shell: bash
       run: sh ./Druware.Extensions/incbuild.sh
     - name: Build
-      run: |
-        dotnet build --no-restore --configuration RELEASE 
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build --no-restore --configuration Release 
+    # - name: Test
+    #   run: dotnet test --no-build --verbosity normal
     - name: Pack
-      run: dotnet pack --output pub --configuration=Release
+      run: dotnet pack --output pub --configuration Release
     - name: Push to Nuget
       shell: bash
       run: sh ./Druware.Extensions/nuget-push.sh "${{ secrets.NUGET_APIKEY }}"
+    - name: Commit files
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "version updated"
+        file_pattern: ./Druware.Extensions/Druware.Extensions.csproj
+
+# Remaining to do: commit the updated version number to the repo
+# Remaining to do: add a step to create a release tag and push it to the repo
+# Remaining to do: add a step to create a release on GitHub
