--- a/Druware.Extensions/Druware.Extensions.csproj
+++ b/Druware.Extensions/Druware.Extensions.csproj
@@ -7,7 +7,7 @@
     
     <!-- Package Information -->
     <PackageId>Druware.Extensions</PackageId>
-    <Version>1.1.21</Version>
+    <Version>1.1.10</Version>
     <Title>Druware.Extensions</Title>
     <PackageTags>net6 net8 extensions</PackageTags>
     <Description>
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <!-- PropertyGroup necessary references -->
+    <None Include="..\CHANGE.md" Pack="false" PackagePath="CHANGE.md"/>
     <None Include="..\LICENSE.txt" Pack="true" PackagePath="LICENSE.txt"/>
     <None Include="..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
